--- a/slideshow.html
+++ b/slideshow.html
@@ -5,20 +5,35 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>second Calculator</title>
-  <link rel="stylesheet" href="./assets/styles/style.css">
+  <style>
+    h3 {
+      color: green;
+    }
+
+    #slide-container {
+      background-position: center;
+      background-size: contain;
+      background-repeat: no-repeat;
+    }
+
+    img {
+      position: relative;
+      bottom: -300px;
+    }
+  </style>
 </head>
 <body style="padding: 2rem;">
   <h3>test slide show:</h3>
 
   <h1>Ford x Lamborghini</h1>
 
-  <div class="container">
+  <div id="slide-container">
     <img id="img" src="./assets/images/yello ford ranger.jpeg" alt="image of vehicle">
 
     <p id="indxCounter">0</p>
 
     <div class="btns">
-      <button id="stop" onclick="stopSlide">Stop</button>
+      <button id="stop" onclick="stopSlide()">Stop</button>
 
       <button id="start" onclick="replaceImage()">start</button>
     </div>
@@ -27,6 +42,7 @@
   <!-- <script src="./assets/scripts/script.js"></script> -->
 </body>
   <script>
+    const slideContainer = document.querySelector('#slide-container');
     const indxCounter = document.querySelector('#indxCounter');
     const image = document.querySelector('#img');
     const imageList = [
@@ -38,21 +54,25 @@
       './assets/images/ford SUVs.jpeg',
       './assets/images/Lamborghini Aventador .jpeg',
       './assets/images/lamborghini murcielago.jpeg'
-    ]
+    ];
 
+    let intervalId;
+  
     const replaceImage = () => {
       let ind = 0;
 
-      setInterval(() => {
+      intervalId = setInterval(() => {
         ind = (ind === imageList.length - 1 ) ? 0 : ind + 1;
         image.src = imageList[ind];
+        slideContainer.style.backgroundImage = `url('${imageList[ind - 1]}')`
 
-        indxCounter.innerHTML= ind;
-      }, 3000);
+        indxCounter.innerHTML = ind;
+      }, 2000);
     }
 
     const stopSlide = () => {
-      console.log('stopping slide');
+      console.log('stopping slide', intervalId);
+      clearInterval(intervalId)
     }
 
   </script>
