doing form validation

--- a/assets/pages/color-picker.html
+++ b/assets/pages/color-picker.html
@@ -19,6 +19,17 @@
   </style>
 </head>
 <body>
+  <div class="nav" style="display: flex; gap: 20px; margin: 10px 0 3rem;">
+    <a href="../../index.html">Home</a>
+
+    <a href="./slideshow.html">slide show</a>
+
+      <a href="./rangeSelector.html">range selector</a>
+
+      <a href="./login.html">login form</a>
+  </div>
+
+
   <div class="conlor-container">
     <span>
       <input type="text" class="hex-code">
