--- a/assets/pages/rangeSelector.html
+++ b/assets/pages/rangeSelector.html
@@ -7,9 +7,11 @@
   <title>Range Selector</title>
   <style>
     .container {
+      border: 1px solid #000000cf;
       width: fit-content;
       height: fit-content;
-      margin:  3rem auto;
+      margin:  3rem 10px;
+      padding: 10px;
       font-size: 4.2rem;
       display: flex;
       flex-direction: column;
@@ -23,6 +25,16 @@
   </style>
 </head>
 <body>
+  <div class="nav" style="display: flex; gap: 20px; margin: 10px 0 3rem;">
+    <a href="../../index.html">Home</a>
+
+    <a href="./slideshow.html">slide show</a>
+
+      <a href="./color-picker.html">color pickr</a>
+
+      <a href="./login.html">login form</a>
+  </div>
+
   <div class="container">
     <span id="out-put" class="range">0</span>
     <input type="range" class="range-selector" value="0" min="0" max="1000" onchange="showRange(this)">
