--- a/assets/pages/slideshow.html
+++ b/assets/pages/slideshow.html
@@ -6,10 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>photo slide</title>
   <style>
-    h3 {
-      color: green;
-    }
-
     #slide-container {
       background-position: center;
       background-size: contain;
@@ -17,13 +13,23 @@
     }
   </style>
 </head>
-<body style="padding: 2rem;">
+<body>
+  <div class="nav" style="display: flex; gap: 20px; margin: 10px 0 3rem;">
+    <a href="../../index.html">Home</a>
+
+      <a href="./color-picker.html">color pickr</a>
+
+      <a href="./rangeSelector.html">range selector</a>
+
+      <a href="./login.html">login form</a>
+  </div>
+
   <h3>test slide show:</h3>
 
   <h1>Ford x Lamborghini</h1>
 
   <div id="slide-container">
-    <img id="img" src="./assets/images/yello ford ranger.jpeg" alt="image of vehicle">
+    <img id="img" src="../images/yello ford ranger.jpeg" alt="image of vehicle">
 
     <p id="indxCounter">0</p>
 
@@ -41,14 +47,14 @@
     const indxCounter = document.querySelector('#indxCounter');
     const image = document.querySelector('#img');
     const imageList = [
-      './assets/images/yello ford ranger.jpeg',
-      './assets/images/2023 ford mustang.jpeg',
-      './assets/images/2017 ford mustang.jpeg',
-      './assets/images/ford bronco rapto.jpeg',
-      './assets/images/ford mustang GT.jpeg',
-      './assets/images/ford SUVs.jpeg',
-      './assets/images/Lamborghini Aventador .jpeg',
-      './assets/images/lamborghini murcielago.jpeg'
+      '../images/yello ford ranger.jpeg',
+      '../images/2023 ford mustang.jpeg',
+      '../images/2017 ford mustang.jpeg',
+      '../images/ford bronco rapto.jpeg',
+      '../images/ford mustang GT.jpeg',
+      '../images/ford SUVs.jpeg',
+      '../images/Lamborghini Aventador .jpeg',
+      '../images/lamborghini murcielago.jpeg'
     ];
 
     let intervalId;
