changed the events in the color picker and the range selector from onchange to oninput

--- a/assets/pages/color-picker.html
+++ b/assets/pages/color-picker.html
@@ -34,7 +34,7 @@
     <span>
       <input type="text" class="hex-code">
 
-      <input type="color" class="picker" onchange="changeColor()">
+      <input type="color" class="picker" oninput="changeColor()">
     </span>
 
     <div class="out-put"></div>
