--- a/assets/pages/login.html
+++ b/assets/pages/login.html
@@ -22,7 +22,7 @@
 
       <br /> <br /> <br />
 
-      <input type="password" id="password" placeholder="input password">
+      <input type="text" id="password" placeholder="input password">
 
       <p style="margin: 40px 0 5; word-wrap: break-word;"></p>
     </form>
@@ -46,6 +46,11 @@
       else {
         if(password.length < 8) {
           message.innerHTML = 'password must be atleast 8 characters';
+          clearMessage();
+          return;
+        }
+        else if (!/[0-9][a-zA-Z][\@|\.|\#|\_|\$]/.test(password)) {
+          message.innerHTML = 'password must contain a special character or number';
           clearMessage();
           return;
         }
