--- a/assets/pages/login.html
+++ b/assets/pages/login.html
@@ -12,7 +12,7 @@
 
       <a href="./slideshow.html">slide show</a>
 
-        <a href="./color-picker.html">color pickr</a>
+        <a href="./color-picker.html">color picker</a>
 
         <a href="./rangeSelector.html">range selector</a>
     </div>
