--- a/assets/pages/rangeSelector.html
+++ b/assets/pages/rangeSelector.html
@@ -30,7 +30,7 @@
 
     <a href="./slideshow.html">slide show</a>
 
-      <a href="./color-picker.html">color pickr</a>
+      <a href="./color-picker.html">color picker</a>
 
       <a href="./login.html">login form</a>
   </div>
