--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="links">
       <a href="./assets/pages/slideshow.html">slide show</a> <br /> <br />
 
-      <a href="./assets/pages/color-picker.html">color pickr</a> <br /> <br />
+      <a href="./assets/pages/color-picker.html">color picker</a> <br /> <br />
 
       <a href="./assets/pages/rangeSelector.html">range selector</a> <br /> <br />
 
