--- a/assets/pages/slideshow.html
+++ b/assets/pages/slideshow.html
@@ -17,7 +17,7 @@
   <div class="nav" style="display: flex; gap: 20px; margin: 10px 0 3rem;">
     <a href="../../index.html">Home</a>
 
-      <a href="./color-picker.html">color pickr</a>
+      <a href="./color-picker.html">color picker</a>
 
       <a href="./rangeSelector.html">range selector</a>
 
