--- a/assets/pages/login.html
+++ b/assets/pages/login.html
@@ -1,68 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>home</title>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>home</title>
+  </head>
   <body>
-    <div class="nav" style="display: flex; gap: 20px; margin: 10px 0 3rem;">
+    <div class="nav" style="display: flex; gap: 20px; margin: 10px 0 3rem">
       <a href="../../index.html">Home</a>
 
       <a href="./slideshow.html">slide show</a>
 
-        <a href="./color-picker.html">color picker</a>
+      <a href="./color-picker.html">color picker</a>
 
-        <a href="./rangeSelector.html">range selector</a>
+      <a href="./rangeSelector.html">range selector</a>
     </div>
 
-    <form id="form" style="border: 1px solid #000; padding: 2rem 1rem 5px; width: 200px; min-height: 100px">
-      <input type="text" id="name" placeholder="input name">
+    <form
+      id="form"
+      style="
+        border: 1px solid #000;
+        padding: 2rem 1rem 5px;
+        width: 200px;
+        min-height: 100px;
+      "
+    >
+      <input type="text" id="name" placeholder="input name" />
 
-      <br /> <br /> <br />
+      <br />
+      <br />
+      <br />
 
-      <input type="text" id="password" placeholder="input password">
+      <input type="text" id="password" placeholder="input password" />
 
-      <p style="margin: 40px 0 5; word-wrap: break-word;"></p>
+      <p style="margin: 40px 0 5; word-wrap: break-word"></p>
     </form>
 
-    <button id="loginbtn" style="margin: 20px auto;" onclick="handleForm()">Login</button>
+    <button
+      id="loginbtn"
+      style="margin: 20px auto; border: none; padding: 10px; transition: 0.4s;"
+      onclick="handleForm()"
+      onmouseover="addStyle('loginbtn', 'backgroundColor', 'gold')"
+      onmouseout="removeStyle('loginbtn', 'backgroundColor')"
+    >
+      Login
+    </button>
   </body>
 
   <script>
-    const clearMessage = async () => setTimeout(() => document.querySelector('p').innerHTML = '', 3000);
-  
+    const addStyle = (id, attri, sty) => {
+      document.getElementById(id).style[attri] = sty;
+    };
+
+    const removeStyle = (id, attri) => {
+      document.getElementById(id).style[attri] = 'unset';
+    };
+
+    const clearMessage = async () =>
+      setTimeout(() => (document.querySelector("p").innerHTML = ""), 3000);
+
     const handleForm = async () => {
-      const name = document.querySelector('#name').value;
-      const password = document.querySelector('#password').value;
-      const message = document.querySelector('p');
+      const name = document.querySelector("#name").value;
+      const password = document.querySelector("#password").value;
+      const message = document.querySelector("p");
 
       if (!name || !password) {
-        message.innerHTML = 'input all fields';
+        message.innerHTML = "input all fields";
         clearMessage();
         return;
-      }
-      else {
+      } else {
         // const myRegex = /([0-9])\w+([@.$#!%^&*()\[\]{};:'",<.>/?\\|~`_])/g
-        const myRegex = /[@.$#!%^&*()\[\]{};:'",<.>/?\\|~`_][a-z]/g
-        if(password.length < 8) {
-          message.innerHTML = 'password must be atleast 8 characters';
+        const myRegex = /[@.$#!%^&*()\[\]{};:'",<.>/?\\|~`_][a-z]/g;
+        if (password.length < 8) {
+          message.innerHTML = "password must be atleast 8 characters";
           clearMessage();
           return;
-        }
-        else if (!myRegex.test(password)) {
-          message.innerHTML = 'password must contain a special character or number';
+        } else if (!myRegex.test(password)) {
+          message.innerHTML =
+            "password must contain a special character or number";
           clearMessage();
           return;
         }
 
-        message.innerHTML = 'form Validated';
+        message.innerHTML = "form Validated";
 
-        await clearMessage()
-          .then(() => setTimeout(() => message.innerHTML = 'Logging in...', 3000))
+        await clearMessage().then(() =>
+          setTimeout(() => (message.innerHTML = "Logging in..."), 3000)
+        );
       }
-    }
-
+    };
   </script>
 </html>
