--- a/index.html
+++ b/index.html
@@ -18,14 +18,38 @@
     <h3>Play Ground</h3>
 
     <div class="links">
-      <a href="./assets/pages/slideshow.html">slide show</a> <br /> <br />
+      <!-- <a href="./assets/pages/slideshow.html">slide show</a> <br /> <br />
 
       <a href="./assets/pages/color-picker.html">color picker</a> <br /> <br />
 
       <a href="./assets/pages/rangeSelector.html">range selector</a> <br /> <br />
 
       <a href="./assets/pages/login.html">login form</a>
+
+      <a href="./assets/pages/login.html">login form</a> -->
     </div>
   </div>
 </body>
+  <script>
+    const PATHS= [
+      {link: "slideshow", name: "slide show"},
+      {link: "color-picker", name: "color picker"},
+      {link:"rangeSelector", name: "range selector"},
+      {link:"login", name: "login form"},
+      {link: "intersection-observer", name: "intersection observer"},
+    ];
+
+    const links = document.querySelector(".links");
+
+    PATHS.forEach(({link, name}) => {
+      const a_tag = document.createElement("a");
+      a_tag.href = `./assets/pages/${link}.html`;
+
+      a_tag.innerHTML = name;
+
+      links.append(a_tag)
+      links.innerHTML += '<br /> <br />'
+
+    })
+  </script>
 </html>
