--- a/src/pages/color-picker/index.html
+++ b/src/pages/color-picker/index.html
@@ -4,29 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./index.css">
   <title>color Picker</title>
-  <style>
-    .conlor-container {
-      display: flex;
-      gap: 20px;
-    }
-
-    .out-put {
-      background-color: #000;
-      height: 200px;
-      width: 200px;
-    }
-
-    a {
-      color: #1e91d8;
-      cursor: pointer;
-    }
-  </style>
 </head>
   <body>
-    <nav id="nav" style="display: flex; gap: 20px; margin: 10px 0 3rem;">
+    <nav id="nav">
+      <!-- script's gonna fill this-->
     </nav>
-
 
     <div class="conlor-container">
       <span>
@@ -39,21 +23,5 @@
     </div>
   </body>
 
-  <script type="module">
-    // script starts here
-    import { createNavBar } from "../../components/index.js"
-
-    createNavBar("color picker");
-
-    const picker = document.getElementById("picker")
-    const hex = document.querySelector('.hex-code');
-
-    const changeColor = () => {
-      console.log('color changing')
-      hex.value = picker.value;
-      document.querySelector('.out-put').style.backgroundColor = picker.value;
-    }
-
-    picker.oninput = changeColor
-  </script>
+  <script type="module" src="./index.js"></script>
 </html>
