--- a/src/pages/rangeSelector/index.html
+++ b/src/pages/rangeSelector/index.html
@@ -4,33 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./index.css">
   <title>Range Selector</title>
-  <style>
-    .container {
-      border: 1px solid #000000cf;
-      width: fit-content;
-      height: fit-content;
-      margin:  3rem 10px;
-      padding: 10px;
-      font-size: 4.2rem;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 30px;
-    }
-
-    input {
-      width: 300px;
-    }
-  
-    a {
-      color: #1e91d8;
-      cursor: pointer;
-    }
-  </style>
 </head>
   <body>
-    <nav id="nav" style="display: flex; gap: 20px; margin: 10px 0 3rem;">
+    <nav id="nav">
+      <!-- script's gonna fill this-->
     </nav>
 
     <div class="container">
@@ -39,15 +18,5 @@
     </div>
   </body>
 
-  <script type="module">
-    // script starts here
-    import { createNavBar } from "../../components/index.js"
-    createNavBar("range selector")
-
-    const showRange = ({target: { value }}) => {
-      document.querySelector('.range').innerHTML = value
-    }
-
-    document.getElementById("range-selector").oninput = (el) => showRange(el)
-  </script>
+  <script type="module" src="./index.js"></script>
 </html>
