--- a/src/pages/slideshow/index.html
+++ b/src/pages/slideshow/index.html
@@ -4,22 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./index.css">
   <title>photo slide</title>
-  <style>
-    #slide-container {
-      background-position: center;
-      background-size: contain;
-      background-repeat: no-repeat;
-    }
-
-    a {
-        color: #1e91d8;
-        cursor: pointer;
-      }
-  </style>
 </head>
   <body>
-    <nav id="nav" style="display: flex; gap: 20px; margin: 10px 0 3rem;"></nav>
+    <nav id="nav">
+      <!-- script's gonna fill this-->
+    </nav>
 
     <h3>test slide show:</h3>
 
@@ -40,46 +31,5 @@
     <!-- <script src="./assets/scripts/script.js"></script> -->
   </body>
 
-  <script type="module">
-    // script starts here
-    import { createNavBar } from "../../components/index.js"
-    createNavBar("slide show");
-
-    const slideContainer = document.querySelector('#slide-container');
-    const indxCounter = document.querySelector('#indxCounter');
-    const image = document.querySelector('#img');
-    const imageList = [
-      './images/yello ford ranger.jpeg',
-      './images/2023 ford mustang.jpeg',
-      './images/2017 ford mustang.jpeg',
-      './images/ford bronco rapto.jpeg',
-      './images/ford mustang GT.jpeg',
-      './images/ford SUVs.jpeg',
-      './images/Lamborghini Aventador .jpeg',
-      './images/lamborghini murcielago.jpeg'
-    ];
-
-    let intervalId;
-  
-    const replaceImage = () => {
-      let ind = 0;
-
-      intervalId = setInterval(() => {
-        ind = (ind === imageList.length - 1 ) ? 0 : ind + 1;
-        image.src = imageList[ind];
-        // slideContainer.style.backgroundImage = `url('${imageList[ind - 1]}')`;
-
-        indxCounter.innerHTML = ind;
-      }, 2000);
-    }
-
-    const stopSlide = () => {
-      console.log('stopping slide', intervalId);
-      clearInterval(intervalId)
-    }
-
-    document.getElementById("start").onclick = () => replaceImage()
-
-    document.getElementById("stop").onclick = () => stopSlide()
-  </script>
+  <script type="module" src="./index.js"></script>
 </html>
