added the footer added the footer tag to all pages

--- a/src/pages/intersection-observer/index.html
+++ b/src/pages/intersection-observer/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <nav id="nav">
-      <!-- script's gonna fill this-->
+      <!-- nav script's gonna fill this-->
     </nav>
 
     <main  id="card_container">
@@ -33,6 +33,10 @@
       <div class="card">This is a card</div>
       <div class="card">This is the last card</div>
     </main>
+
+    <footer id="footer">
+      <!-- footer script's gonna fill this -->
+    </footer>
   </body>
 
   <script type="module" src="./index.js"></script>
