--- a/src/pages/rangeSelector/index.html
+++ b/src/pages/rangeSelector/index.html
@@ -9,13 +9,17 @@
 </head>
   <body>
     <nav id="nav">
-      <!-- script's gonna fill this-->
+      <!-- nav script's gonna fill this-->
     </nav>
 
-    <div class="container">
+    <main class="container">
       <span id="out-put" class="range">0</span>
       <input type="range" id="range-selector" value="0" min="0" max="1000">
-    </div>
+    </main>
+
+    <footer id="footer">
+      <!-- footer script's gonna fill this -->
+    </footer>
   </body>
 
   <script type="module" src="./index.js"></script>
