--- a/src/pages/slideshow/index.html
+++ b/src/pages/slideshow/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,13 @@
   <link rel="stylesheet" href="./index.css">
   <title>photo slide</title>
 </head>
-  <body>
-    <nav id="nav">
-      <!-- script's gonna fill this-->
-    </nav>
 
+<body>
+  <nav id="nav">
+    <!-- nav script's gonna fill this-->
+  </nav>
+
+  <main>
     <h3>test slide show:</h3>
 
     <h1>Ford x Lamborghini</h1>
@@ -27,9 +30,14 @@
         <button id="start">start</button>
       </div>
     </div>
-    
-    <!-- <script src="./assets/scripts/script.js"></script> -->
-  </body>
+  </main>
 
-  <script type="module" src="./index.js"></script>
+
+  <footer id="footer">
+    <!-- footer script's gonna fill this -->
+  </footer>
+</body>
+
+<script type="module" src="./index.js"></script>
+
 </html>
