--- a/src/pages/color-picker/index.html
+++ b/src/pages/color-picker/index.html
@@ -9,10 +9,10 @@
 </head>
   <body>
     <nav id="nav">
-      <!-- script's gonna fill this-->
+      <!-- nav script's gonna fill this-->
     </nav>
 
-    <div class="conlor-container">
+    <main class="conlor-container">
       <span>
         <input type="text" class="hex-code">
 
@@ -20,7 +20,11 @@
       </span>
 
       <div class="out-put"></div>
-    </div>
+    </main>
+
+    <footer id="footer">
+      <!-- footer script's gonna fill this -->
+    </footer>
   </body>
 
   <script type="module" src="./index.js"></script>
