--- a/src/pages/intersection-observer/index.html
+++ b/src/pages/intersection-observer/index.html
@@ -1,43 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./index.css">
+    <meta charset='UTF-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <link rel='stylesheet' href='./index.css'>
     <title>intersection-observer</title>
   </head>
   <body>
-    <nav id="nav">
+    <nav id='nav'>
       <!-- nav script's gonna fill this-->
     </nav>
 
-    <main  id="card_container">
-      <div class="card">This is the first card</div>
-      <div class="card">This is a card</div>
-      <div class="card">This is a card</div>
-      <div class="card">This is a card</div>
-      <div class="card">This is a card</div>
-      <div class="card">This is a card</div>
-      <div class="card">This is a card</div>
-      <div class="card">This is a card</div>
-      <div class="card">This is a card</div>
-      <div class="card">This is a card</div>
-      <div class="card">This is a card</div>
-      <div class="card">This is a card</div>
-      <div class="card">This is a card</div>
-      <div class="card">This is a card</div>
-      <div class="card">This is a card</div>
-      <div class="card">This is a card</div>
-      <div class="card">This is a card</div>
-      <div class="card">This is a card</div>
-      <div class="card">This is a card</div>
-      <div class="card">This is the last card</div>
+    <main  id='card_container'>
+      <div class='card'>This is the first card</div>
+      <div class='card'>This is a card</div>
+      <div class='card'>This is a card</div>
+      <div class='card'>This is a card</div>
+      <div class='card'>This is a card</div>
+      <div class='card'>This is a card</div>
+      <div class='card'>This is a card</div>
+      <div class='card'>This is a card</div>
+      <div class='card'>This is a card</div>
+      <div class='card'>This is a card</div>
+      <div class='card'>This is a card</div>
+      <div class='card'>This is a card</div>
+      <div class='card'>This is a card</div>
+      <div class='card'>This is a card</div>
+      <div class='card'>This is a card</div>
+      <div class='card'>This is a card</div>
+      <div class='card'>This is a card</div>
+      <div class='card'>This is a card</div>
+      <div class='card'>This is a card</div>
+      <div class='card'>This is the last card</div>
     </main>
 
-    <footer id="footer">
+    <footer id='footer'>
       <!-- footer script's gonna fill this -->
     </footer>
   </body>
 
-  <script type="module" src="./index.js"></script>
+  <script type='module' src='./index.js'></script>
 </html>
