--- a/src/pages/slideshow/index.html
+++ b/src/pages/slideshow/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./index.css">
+  <meta charset='UTF-8'>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+  <link rel='stylesheet' href='./index.css'>
   <title>photo slide</title>
 </head>
 
 <body>
-  <nav id="nav">
+  <nav id='nav'>
     <!-- nav script's gonna fill this-->
   </nav>
 
@@ -19,25 +19,25 @@
 
     <h1>Ford x Lamborghini</h1>
 
-    <div id="slide-container">
-      <img id="img" src="./images/yello ford ranger.jpeg" alt="image of vehicle">
+    <div id='slide-container'>
+      <img id='img' src='./images/yello ford ranger.jpeg' alt='image of vehicle'>
 
-      <p id="indxCounter">0</p>
+      <p id='indxCounter'>0</p>
 
-      <div class="btns">
-        <button id="stop">Stop</button>
+      <div class='btns'>
+        <button id='stop'>Stop</button>
 
-        <button id="start">start</button>
+        <button id='start'>start</button>
       </div>
     </div>
   </main>
 
 
-  <footer id="footer">
+  <footer id='footer'>
     <!-- footer script's gonna fill this -->
   </footer>
 </body>
 
-<script type="module" src="./index.js"></script>
+<script type='module' src='./index.js'></script>
 
 </html>
