--- a/src/pages/color-picker/index.html
+++ b/src/pages/color-picker/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./index.css">
+  <meta charset='UTF-8'>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+  <link rel='stylesheet' href='./index.css'>
   <title>color Picker</title>
 </head>
   <body>
-    <nav id="nav">
+    <nav id='nav'>
       <!-- nav script's gonna fill this-->
     </nav>
 
-    <main class="conlor-container">
+    <main class='conlor-container'>
       <span>
-        <input type="text" class="hex-code">
+        <input type='text' class='hex-code'>
 
-        <input type="color" id="picker">
+        <input type='color' id='picker'>
       </span>
 
-      <div class="out-put"></div>
+      <div class='out-put'></div>
     </main>
 
-    <footer id="footer">
+    <footer id='footer'>
       <!-- footer script's gonna fill this -->
     </footer>
   </body>
 
-  <script type="module" src="./index.js"></script>
+  <script type='module' src='./index.js'></script>
 </html>
