--- a/src/pages/login/index.html
+++ b/src/pages/login/index.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./index.css">
+  <meta charset='UTF-8' />
+  <meta http-equiv='X-UA-Compatible' content='IE=edge' />
+  <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+  <link rel='stylesheet' href='./index.css'>
   <title>Login</title>
 </head>
 
 <body>
-  <nav id="nav">
+  <nav id='nav'>
     <!-- nav script's gonna fill this-->
   </nav>
 
   <main>
-    <form id="form" style="
+    <form id='form' style='
       border: 1px solid #000;
       padding: 2rem 1rem 5px;
       width: 200px;
       min-height: 100px;
-    ">
-      <input type="text" id="name" placeholder="input name" />
+    '>
+      <input type='text' id='name' placeholder='input name' />
 
       <br />
       <br />
       <br />
 
-      <input type="text" id="password" placeholder="input password" />
+      <input type='text' id='password' placeholder='input password' />
 
-      <p style="margin: 40px 0 5; word-wrap: break-word"></p>
+      <p style='margin: 40px 0 5; word-wrap: break-word'></p>
     </form>
 
-    <button id="loginbtn" style="margin: 20px auto; border: none; padding: 10px; transition: 0.4s;">
+    <button id='loginbtn' style='margin: 20px auto; border: none; padding: 10px; transition: 0.4s;'>
       Login
     </button>
   </main>
 
-  <footer id="footer">
+  <footer id='footer'>
     <!-- footer script's gonna fill this -->
   </footer>
 </body>
 
-<script type="module" src="./index.js"></script>
+<script type='module' src='./index.js'></script>
 
 </html>
