--- a/src/pages/rangeSelector/index.html
+++ b/src/pages/rangeSelector/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./index.css">
+  <meta charset='UTF-8'>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+  <link rel='stylesheet' href='./index.css'>
   <title>Range Selector</title>
 </head>
   <body>
-    <nav id="nav">
+    <nav id='nav'>
       <!-- nav script's gonna fill this-->
     </nav>
 
-    <main class="container">
-      <span id="out-put" class="range">0</span>
-      <input type="range" id="range-selector" value="0" min="0" max="1000">
+    <main class='container'>
+      <span id='out-put' class='range'>0</span>
+      <input type='range' id='range-selector' value='0' min='0' max='1000'>
     </main>
 
-    <footer id="footer">
+    <footer id='footer'>
       <!-- footer script's gonna fill this -->
     </footer>
   </body>
 
-  <script type="module" src="./index.js"></script>
+  <script type='module' src='./index.js'></script>
 </html>
