testing on drop

--- a/src/pages/drag-and-drop/index.html
+++ b/src/pages/drag-and-drop/index.html
@@ -14,10 +14,13 @@
   </nav>
 
   <main>
+    <h2>Move items bellow</h2>
+
     <div class='container'>
       <p class='draggable' draggable='true'>1</p>
       <p class='draggable' draggable='true'>2</p>
     </div>
+
     <div class='container'>
       <p class='draggable' draggable='true'>3</p>
       <p class='draggable' draggable='true'>4</p>
