added file upload with dragg and drop and add loading effect

--- a/src/pages/drag-and-drop-sorting/index.html
+++ b/src/pages/drag-and-drop-sorting/index.html
@@ -5,7 +5,7 @@
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
   <link rel='stylesheet' href='./index.css'>
-  <title>Drag and drop</title>
+  <title>Drag and drop sorting</title>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
   </nav>
 
   <main>
-    <h2>Move items bellow</h2>
+    <h2>Move or rearange items bellow</h2>
 
     <div class='container'>
       <p class='draggable' draggable='true'>1</p>
@@ -24,6 +24,12 @@
     <div class='container'>
       <p class='draggable' draggable='true'>3</p>
       <p class='draggable' draggable='true'>4</p>
+    </div>
+
+    <div class='container'>
+      <p class='draggable' draggable='true'>5</p>
+      <p class='draggable' draggable='true'>6</p>
+      <p class='draggable' draggable='true'>7</p>
     </div>
   </main>
 </body>
