--- a/src/pages/drag-and-drop-files/index.html
+++ b/src/pages/drag-and-drop-files/index.html
@@ -17,10 +17,19 @@
     <h2>drag and drop files on the drop box below to upload them.</h2>
 
     <div class='drop-box'>
-      <span class='loading'></span>
+      <span class='drop-text'>Drop file(s) here</span>
     </div>
 
     <div class='file-display'>
+      <figure class="file">
+        <img src="https://t4.ftcdn.net/jpg/02/65/84/77/360_F_265847744_xfvDgrqK0pPApYI7JKse0NIHImnivkCi.jpg" alt="image">
+        <figcaption>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo, nemo?hello</figcaption>
+      </figure>
+
+      <figure class="file">
+        <img src="https://community.atlassian.com/t5/image/serverpage/image-id/157040i289B328EEF18671A/image-size/large?v=v2&px=999" alt="image" class="error">
+        <figcaption>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo, nemo?hello</figcaption>
+      </figure>
     </div>
 
   </main>
