added event propagation

--- a/src/pages/drag-and-drop-files/index.html
+++ b/src/pages/drag-and-drop-files/index.html
@@ -21,18 +21,22 @@
     </div>
 
     <div class='file-display'>
-      <figure class="file">
-        <img src="https://t4.ftcdn.net/jpg/02/65/84/77/360_F_265847744_xfvDgrqK0pPApYI7JKse0NIHImnivkCi.jpg" alt="image">
+      <!-- <figure class='file'>
+        <img src='https://t4.ftcdn.net/jpg/02/65/84/77/360_F_265847744_xfvDgrqK0pPApYI7JKse0NIHImnivkCi.jpg' alt='image'>
         <figcaption>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo, nemo?hello</figcaption>
       </figure>
 
-      <figure class="file">
-        <img src="https://community.atlassian.com/t5/image/serverpage/image-id/157040i289B328EEF18671A/image-size/large?v=v2&px=999" alt="image" class="error">
+      <figure class='file'>
+        <img src='https://community.atlassian.com/t5/image/serverpage/image-id/157040i289B328EEF18671A/image-size/large?v=v2&px=999' alt='image' class='error'>
         <figcaption>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo, nemo?hello</figcaption>
-      </figure>
+      </figure> -->
     </div>
 
   </main>
+
+  <footer id='footer'>
+    <!-- footer script's gonna fill this -->
+  </footer>
 </body>
 <script type='module' src='./index.js'></script>
 
