--- a/src/pages/drag-and-drop-sorting/index.html
+++ b/src/pages/drag-and-drop-sorting/index.html
@@ -32,6 +32,10 @@
       <p class='draggable' draggable='true'>7</p>
     </div>
   </main>
+
+  <footer id='footer'>
+    <!-- footer script's gonna fill this -->
+  </footer>
 </body>
 <script type='module' src='./index.js'></script>
 
