--- a/src/pages/event-propagation/index.html
+++ b/src/pages/event-propagation/index.html
@@ -39,7 +39,10 @@
       the function in the capture (or bubbling) stage.
 
       if true, the function will be run in the capture stage, else if false or nothing at all, the function will
-      be run in the bubbling stage
+      be run in the bubbling stage.
+
+      Also, we can use the event.stopPropagation() method to halt any further capture/bubble propagations.
+
       checkout this documentation on <a href='https://www.quirksmode.org/js/events_order.html' target='_blank'>event orders</a>
     </pre>
   </main>
